# spring-demo-bazel-test

./: .gitignore  README.md  WORKSPACE.bazel  bazel-testlogs  maven_install.json
demobazel/src/main/java/com/kelsonthony/demobazel/demobazel/: BUILD.bazel  DemobazelApplication.java
demobazel/src/test/java/com/kelsonthony/demobazel/demobazel/: DemobazelApplicationTests.java
