java_library(
    name = "lib",
    srcs = glob(["*.java"]),
    visibility = ["//src/test:__subpackages__"],
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_web",
        #"@maven//:org_springframework_boot_spring_boot_starter_parent",
        #"@maven//:org_springframework_boot_spring_boot_starter_web",
        #"@maven//:org_springframework_spring_context",
        #"@maven//:org_springframework_boot_spring_boot_starter_data_jpa",
        #"@maven//:org_springframework_boot_spring_boot_starter_test",
        #"@maven//:org_springframework_boot_spring_boot_autoconfigure",
        #"@maven//:org_springframework_boot_spring_boot ",
        #"@maven//:org_springframework_spring_web",
        #"@maven//:com_h2database_h2",
        #"@maven//:net_devh_grpc_server_spring_boot_starter",
        #"@maven//:io_grpc_grpc_stub",
        #"@maven//:io_grpc_grpc_protobuf",
        #"@maven//:jakarta_annotation_jakarta_annotation_api",
    ],
)

java_binary(
    name = "app",
    main_class = "com.kelsonthony.demobazel.demobazel.DemobazelApplication",
    runtime_deps = [
        ":lib",
    ],
)